--- a/queo-commons-persistence-libdef/pom.xml
+++ b/queo-commons-persistence-libdef/pom.xml
@@ -257,17 +257,13 @@
 				<version>1.3.5</version>
 			</dependency>
 
-			<!-- for test -->
+			<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.13.2</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.hamcrest</groupId>
-						<artifactId>hamcrest-core</artifactId>
-					</exclusion>
-				</exclusions>
+			    <groupId>org.junit.jupiter</groupId>
+			    <artifactId>junit-jupiter-api</artifactId>
+			    <version>5.10.2</version>
+				<type>pom</type>
+			    <scope>import</scope>
 			</dependency>
 
 			<!-- AssertJ -->
@@ -296,7 +292,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.jmock</groupId>
-				<artifactId>jmock-junit4</artifactId>
+				<artifactId>jmock-junit5</artifactId>
 				<version>${jmock.version}</version>
 				<exclusions>
 					<exclusion>
