--- a/queo-commons-persistence-test-demo/pom.xml
+++ b/queo-commons-persistence-test-demo/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>queo-commons-persistence-test-demo</artifactId>
@@ -38,7 +39,7 @@
 				<artifactId>logback-classic</artifactId>
 				<version>${logback.version}</version>
 			</dependency>
-			
+
 			<!-- cglib -->
 			<dependency>
 				<groupId>cglib</groupId>
@@ -57,8 +58,8 @@
 				<artifactId>hibernateextension</artifactId>
 				<version>1.3.4</version>
 			</dependency>
-			
-			
+
+
 			<!-- AspectJ -->
 			<!--				
 				The three jars, aspectjrt, aspectjweaver, aspectjtools are supersets of each other:
@@ -119,7 +120,7 @@
 			<groupId>com.queomedia.commons.persistence</groupId>
 			<artifactId>queo-commons-persistence-utils</artifactId>
 		</dependency>
-		
+
 		<!-- Persistence -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -154,7 +155,7 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 			<exclusions>
-			<exclusion>
+				<exclusion>
 					<!-- this example application uses the full aspectjweaver instead -->
 					<groupId>org.aspectj</groupId>
 					<artifactId>aspectjrt</artifactId>
@@ -176,13 +177,13 @@
 			<artifactId>hibernate-validator</artifactId>
 		</dependency>
 		<dependency>
-				<!--
-			   		el-impl is needed for hibernate-validator 5 and 6 
-			   		http://stackoverflow.com/questions/19451814/java-lang-noclassdeffounderror-javax-el-propertynotfoundexception-when-i-send-i
-			   		else: ClassNotFoundException: com.sun.el.ExpressionFactoryImpl			   		
-			   		But is is typical used with scope provided			   		
-			   		with hibernate-validator 6.0.7 we use javax.el-api 3.0.0 and with the glassfish implementation 3.0.1-b08
-			 	-->
+			<!--
+				   el-impl is needed for hibernate-validator 5 and 6
+				   http://stackoverflow.com/questions/19451814/java-lang-noclassdeffounderror-javax-el-propertynotfoundexception-when-i-send-i
+				   else: ClassNotFoundException: com.sun.el.ExpressionFactoryImpl
+				   But is is typical used with scope provided
+				   with hibernate-validator 6.0.7 we use javax.el-api 3.0.0 and with the glassfish implementation 3.0.1-b08
+			 -->
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.el</artifactId>
 		</dependency>
@@ -201,13 +202,13 @@
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 		</dependency>
-		
+
 		<!-- AspectJ -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 		</dependency>
-		
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -216,7 +217,7 @@
 				<exclusion>
 					<groupId>org.springframework</groupId>
 					<artifactId>spring-jcl</artifactId>
-				</exclusion>				
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -231,7 +232,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
 		</dependency>
-		
+
 		<!-- logging -->
 		<!-- we use logBack and SLF4j -->
 		<dependency>
@@ -262,20 +263,37 @@
 
 		<!-- test -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest</artifactId>
 			<scope>test</scope>
 		</dependency>
 
+		<!-- junit -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-launcher</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>			
+			<artifactId>spring-test</artifactId>
 			<!-- MockHttpServletRequest wird im cms verwendet! -->
 			<exclusions>
 				<exclusion>
@@ -341,8 +359,8 @@
 					<proc>none</proc>
 				</configuration>
 			</plugin>
-			
-			
+
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
@@ -367,7 +385,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 		</plugins>
 	</build>
 
