--- a/queo-commons-persistence-core/pom.xml
+++ b/queo-commons-persistence-core/pom.xml
@@ -29,19 +29,14 @@
 			<groupId>com.queomedia</groupId>
 			<artifactId>queo-commons-checks</artifactId>
 		</dependency>
-
 		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>javax.persistence-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
 		</dependency>
 
 
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-jpamodelgen</artifactId>
 			<scope>provided</scope>
 			<!-- only need at compile time -->
@@ -62,6 +57,15 @@
 			<!-- was part of Java in Java8 but not in Java9+ -->
 			<groupId>jakarta.annotation</groupId>
 			<artifactId>jakarta.annotation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+		</dependency>
+		<dependency>
+			<!-- jaxb api implmentation is: org.glassfish.jaxb:jaxb-runtime -->
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
 		</dependency>
 
 		<!-- unit tests -->
