--- a/queo-commons-persistence-entitymanager/pom.xml
+++ b/queo-commons-persistence-entitymanager/pom.xml
@@ -28,6 +28,10 @@
 			<groupId>com.queomedia.commons.persistence</groupId>
 			<artifactId>queo-commons-persistence-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+		</dependency>
 				
  
 		<dependency>
@@ -44,16 +48,8 @@
  				
  		<!-- hibernate -->
 		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>javax.persistence-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
-		</dependency>								
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
 		</dependency>
 		
 		<!-- slf4j -->
