--- a/queo-commons-persistence-extra-criteria/pom.xml
+++ b/queo-commons-persistence-extra-criteria/pom.xml
@@ -31,7 +31,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
 		</dependency>
 
