--- a/queo-commons-persistence-extra-oracle/pom.xml
+++ b/queo-commons-persistence-extra-oracle/pom.xml
@@ -27,14 +27,18 @@
 	<dependencies>
 		<!-- hibernate -->
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>		
 		</dependency>
 
 		<!-- validation -->
 		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>		
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
 		</dependency>
 	</dependencies>
 
