--- a/queo-commons-persistence-extra-springdatajpa/pom.xml
+++ b/queo-commons-persistence-extra-springdatajpa/pom.xml
@@ -51,11 +51,6 @@
 			<artifactId>queo-commons-exceptions</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>javax.persistence-api</artifactId>
-		</dependency>
-
 		<!-- test -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -63,18 +58,18 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
 			<scope>test</scope>
 		</dependency>
 
