--- a/queo-commons-persistence-libdef/pom.xml
+++ b/queo-commons-persistence-libdef/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>queo-commons-persistence-libdef</artifactId>
@@ -13,18 +14,18 @@
 	</parent>
 
 	<properties>
-		<hibernate.version>5.6.15.Final</hibernate.version>
+		<hibernate.version>6.1.4.Final</hibernate.version>
 		<javassist.version>3.25.0-GA</javassist.version>
-		<bytebuddy.version>1.10.1</bytebuddy.version>
+		<bytebuddy.version>1.14.11</bytebuddy.version>
 
 		<!--  spring-data.version 2021.2.7 contains: spring-data-commons and spring-data-jpa version 2.7.7 -->
-		<spring-data.version>2021.2.7</spring-data.version>
+		<spring-data.version>2023.1.2</spring-data.version>
 		<slf4j.version>1.7.36</slf4j.version>
 		<hamcrest.version>2.2</hamcrest.version>
 
 		<aspectj.version>1.9.19</aspectj.version>
 
-		<jaxb.version>2.3.1</jaxb.version>
+		<jaxb.version>3.0.1</jaxb.version>
 		<jaxb.runtime.version>${jaxb.version}</jaxb.runtime.version>
 
 		<jackson.version>2.9.9</jackson.version>
@@ -94,7 +95,7 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-framework-bom</artifactId>
-				<version>5.3.25</version>
+				<version>6.1.3</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -109,12 +110,12 @@
 			<dependency>
 				<groupId>de.humanfork.springdatajpaextension</groupId>
 				<artifactId>spring-data-jpa-extension</artifactId>
-				<version>0.4.4</version>
+				<version>0.4.5-SNAPSHOT</version>
 			</dependency>
 
 			<!-- hibernate / jpa -->
 			<dependency>
-				<groupId>org.hibernate</groupId>
+				<groupId>org.hibernate.orm</groupId>
 				<artifactId>hibernate-core</artifactId>
 				<version>${hibernate.version}</version>
 			</dependency>
@@ -124,34 +125,41 @@
 				<version>${hibernate.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-ehcache</artifactId>
+				<groupId>org.hibernate.orm</groupId>
+				<artifactId>hibernate-jcache</artifactId>
 				<version>${hibernate.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.hibernate</groupId>
+				<groupId>org.hibernate.orm</groupId>
 				<artifactId>hibernate-jpamodelgen</artifactId>
 				<version>${hibernate.version}</version>
 			</dependency>
 
 			<dependency>
-				<groupId>javax.persistence</groupId>
-				<artifactId>javax.persistence-api</artifactId>
-				<version>2.2</version>
+				<groupId>org.jboss.logging</groupId>
+				<artifactId>jboss-logging</artifactId>
+				<version>3.5.3.Final</version>
+			</dependency>
+
+			<dependency>
+				<groupId>jakarta.persistence</groupId>
+				<artifactId>jakarta.persistence-api</artifactId>
+				<version>3.0.0</version>
 			</dependency>
 
 
 			<!-- validation -->
 			<dependency>
-				<groupId>javax.validation</groupId>
-				<artifactId>validation-api</artifactId>
-				<version>2.0.1.Final</version>
+				<groupId>jakarta.validation</groupId>
+				<artifactId>jakarta.validation-api</artifactId>
+				<version>3.0.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate.validator</groupId>
 				<artifactId>hibernate-validator</artifactId>
-				<version>6.2.4.Final</version>
+				<version>7.0.5.Final</version>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/jakarta.el/jakarta.el-api -->
 			<dependency>
 				<!--
 			   		el-impl is needed for hibernate-validator 5 and 6 
@@ -161,8 +169,8 @@
 			   		with hibernate-validator 6.0.7 we use javax.el-api 3.0.0 and with the glassfish implementation 3.0.1-b10
 			 	-->
 				<groupId>org.glassfish</groupId>
-				<artifactId>javax.el</artifactId>
-				<version>3.0.1-b10</version>
+				<artifactId>jakarta.el</artifactId>
+				<version>4.0.2</version>
 			</dependency>
 
 			<!-- slf4j -->
@@ -214,8 +222,8 @@
 			<!-- jaxb api -->
 			<dependency>
 				<!-- jaxb api implmentation is: org.glassfish.jaxb:jaxb-runtime -->
-				<groupId>javax.xml.bind</groupId>
-				<artifactId>jaxb-api</artifactId>
+				<groupId>jakarta.xml.bind</groupId>
+				<artifactId>jakarta.xml.bind-api</artifactId>
 				<version>${jaxb.version}</version>
 			</dependency>
 			<!-- jaxb impl -->
@@ -249,7 +257,7 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			
+
 			<dependency>
 				<!-- was part of Java in Java8 but not in Java9+ -->
 				<groupId>jakarta.annotation</groupId>
@@ -259,11 +267,11 @@
 
 			<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 			<dependency>
-			    <groupId>org.junit.jupiter</groupId>
-			    <artifactId>junit-jupiter-api</artifactId>
-			    <version>5.10.2</version>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-api</artifactId>
+				<version>5.10.2</version>
 				<type>pom</type>
-			    <scope>import</scope>
+				<scope>import</scope>
 			</dependency>
 
 			<!-- AssertJ -->
